--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -12,11 +12,11 @@
     border-width: 1px;
     border-color: #888888;
     display: grid;
-    grid-template-rows: auto 15vh;
+    grid-template-rows: auto 100px;
     overflow: hidden;
 }
 .image-box{
-    width: 100%;
+    width: 300px;
     position: relative;
 }
 .image-profile{
@@ -30,10 +30,13 @@
     justify-content: center;
     align-content: center;
     text-align: center;
+    width: 300px;
+    position: relative;
 }
 .title{
-    font-size: 1.5em;
-    font-weight: 450;
+    font-size: 26px;
+    font-weight: bold;
+    
 }
 .description{
     font-size: 1em;
