--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -15,14 +15,17 @@
     display: grid;
     grid-template-rows: auto 292px;
     overflow: hidden;
+    transition: 0.5s ease;
+    cursor: pointer;
  
+}
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
 }
 .image-box{
     width: 300px;
     position: relative;
-
-    
-
 }
 .image-profile{
     position: absolute;
