--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -11,7 +11,7 @@
     border-radius: 10px;
     border-style: solid;
     border-width: 0.5px;
-    border-color: #000;
+    border-color: rgba(153, 153, 153, 0.6);
     display: grid;
     grid-template-rows: auto 292px;
     overflow: hidden;
@@ -58,7 +58,7 @@
     position: absolute;
     width: 110px;
     height: 38px;
-    background: var(--gradient);
+    background: rgb(79, 167, 71);
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 25px;
