--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -129,7 +129,8 @@ p{
     width: 100%;
     padding: 10px 30px;
     display: flex; 
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
 }
 .social-links img {
     width: 45px;
