fixing responsive behavior

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,8 +1,22 @@
-.icon-shadow{
-    transition: 0.5s ease;
-    cursor: pointer;
-}
-.icon-shadow:hover{
-    filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.5));
-    transform: translateY(-5px);
-}
+// .icon-shadow{
+//     transition: 0.5s ease;
+//     cursor: pointer;
+//     color: #555;
+// }
+// a{
+//     font-size: 4em;
+// }
+// .icon-shadow:hover{
+//     filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.5));
+//     transform: translateY(-5px);
+// }
+// @media only screen and (max-width: 450px) {
+//     a{
+//       font-size: 2em;
+//   }
+//   .icon-shadow{
+//       padding-bottom: 20px;
+//       font-size: 2em;
+//   }
+  
+// }
