--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -1,6 +1,6 @@
 #title{
     position: absolute;
-    z-index: 1;
+ 
     top: 0;
 }
 p{
@@ -39,3 +39,142 @@ p{
     0% {opacity:0;}
     100% {opacity:1;}
     }
+.videoBG{
+    position: relative;
+}
+.profile-image{
+    position: absolute;
+    left: 70vw;
+    top: 30.1vw;
+    width: 25vw;
+}
+.logo{
+    position: absolute; 
+    top: 30.1vw;
+    left: 0;
+    width: 40vw;
+}
+.contact-item1{
+    position: absolute;
+    font-size: 4rem;
+    padding: 15px;
+    top: 52vw;
+    left: 75vw;
+    width: 15vw;
+    transition: 0.5s ease;
+    cursor: pointer;
+    color: #555;
+}
+.contact-item2{
+    position: absolute;
+    font-size: 4rem;
+    padding: 15px;
+    top: 52vw;
+    left: 80vw;
+    width: 15vw;
+    transition: 0.5s ease;
+    cursor: pointer;
+    color: #555;
+}
+
+.contact-item3{
+    position: absolute;
+    font-size: 4rem;
+    padding: 15px;
+    top: 52vw;
+    left: 85vw;
+    width: 15vw;
+    transition: 0.5s ease;
+    cursor: pointer;
+    color: #555;
+}
+
+.contact-item1:hover{
+    filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.5));
+    transform: translateY(-5px);
+    color: #555;
+}
+.contact-item2:hover{
+    filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.5));
+    transform: translateY(-5px);
+    color: #555;
+}
+.contact-item3:hover{
+    filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.5));
+    transform: translateY(-5px);
+    color: #555;
+}
+// @media only screen and (max-width: 600px) {
+
+//     .contact-item1{
+//       font-size: 2.5rem;
+    
+//     }
+//     .contact-item2{
+//       font-size: 2.5rem;
+
+//       }
+//   .contact-item3{
+//       font-size: 2.5rem;
+  
+//   }
+// }
+@media only screen and (max-width: 1280px) {
+
+    .contact-item1{
+      font-size: 3rem;
+      left: 5vw;
+      top: 40vw;
+    }
+    .contact-item2{
+      font-size: 3rem;
+      left: 35vw;
+      top: 40vw;
+      }
+  .contact-item3{
+      font-size: 3rem;
+      left: 63vw;
+      top: 40vw;
+  }
+    
+  }
+@media only screen and (max-width: 550px) {
+
+    .contact-item1{
+      font-size: 3.5rem;
+      left: 5vw;
+      top: 45vw;
+    }
+    .contact-item2{
+      font-size: 3.5rem;
+      left: 35vw;
+      top: 45vw;
+      }
+  .contact-item3{
+      font-size: 3.5rem;
+      left: 63vw;
+      top: 45vw;
+  }
+    
+  }
+@media only screen and (max-width: 450px) {
+
+  .contact-item1{
+    font-size: 3.5rem;
+    left: 5vw;
+    top: 47vw;
+  }
+  .contact-item2{
+    font-size: 3.5rem;
+    left: 35vw;
+    top: 47vw;
+    }
+.contact-item3{
+    font-size: 3.5rem;
+    left: 63vw;
+    top: 47vw;
+}
+  
+}
+
+
